z-index ref bad effects fixed

--- a/styles/blocks/misc/mcard.less
+++ b/styles/blocks/misc/mcard.less
@@ -94,7 +94,8 @@
     width: 100%;
     height: 100%;
 
-    z-index: 0;
+    z-index: 500;
+    //z-index: 0;
     //z-index: 3;
     //z-index: 99999;
   }
