--- a/styles/blocks/misc/mcard/_alt.less
+++ b/styles/blocks/misc/mcard/_alt.less
@@ -20,8 +20,19 @@
       }
 
       &:hover {
-        background-image: none !important;
-        background-color: @color_primary;
+        & + .mcard__bg {
+          background-image: none !important;
+          background-color: @color_primary;
+
+          &::after {
+            background-image: none !important;
+          }
+        }
+      }
+
+      &:hover {
+        //background-image: none !important;
+        //background-color: @color_primary;
       }
     }
 
